src/test/ui/dyn-trait-compatibility.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `dyn`
  --> $DIR/dyn-trait-compatibility.rs:13:11
   |
LL | type A1 = dyn::dyn;
   |           ^^^ Use of undeclared type or module `dyn`

error[E0433]: failed to resolve. Use of undeclared type or module `dyn`
  --> $DIR/dyn-trait-compatibility.rs:19:23
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                       ^^^ Use of undeclared type or module `dyn`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:11:11
   |
LL | type A0 = dyn;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:15:11
   |
LL | type A2 = dyn<dyn, dyn>;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:15:15
   |
LL | type A2 = dyn<dyn, dyn>;
   |               ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:15:20
   |
LL | type A2 = dyn<dyn, dyn>;
   |                    ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:19:11
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:19:16
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                ^^^ not found in this scope

error: aborting due to 8 previous errors

Some errors occurred: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
